--- a/package.json
+++ b/package.json
@@ -22,5 +22,16 @@
   "bugs": {
     "url": "https://github.com/gamusta/puppeteer_data_scrapping/issues"
   },
-  "homepage": "https://github.com/gamusta/puppeteer_data_scrapping#readme"
+  "homepage": "https://github.com/gamusta/puppeteer_data_scrapping#readme",
+  "dependencies": {
+    "file-system": "^2.2.2",
+    "puppeteer": "^5.3.0",
+    "request": "^2.88.2",
+    "sequelize": "^6.3.5",
+    "url": "^0.11.0",
+    "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.2.0"
+  }
 }
