--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   },
   "homepage": "https://github.com/gamusta/puppeteer_data_scrapping#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "file-system": "^2.2.2",
+    "mysql2": "^2.2.2",
     "puppeteer": "^5.3.0",
     "request": "^2.88.2",
     "sequelize": "^6.3.5",
